# tudatBundle

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  LICENSE  README.md  tmp.txt
.github/workflows/: actions.yml  ci.yml  debug.yml  vsenv.bat
boost/stage/lib/: libboost_atomic.so.1.57.0  libboost_chrono.so.1.57.0  libboost_container.so.1.57.0  libboost_context.so.1.57.0  libboost_coroutine.so.1.57.0  libboost_date_time.so.1.57.0  libboost_filesystem.so.1.57.0  libboost_graph.so.1.57.0  libboost_locale.so.1.57.0  libboost_log.so.1.57.0  libboost_log_setup.so.1.57.0  libboost_math_c99.so.1.57.0  libboost_math_c99f.so.1.57.0  libboost_math_c99l.so.1.57.0  libboost_math_tr1.so.1.57.0  libboost_math_tr1f.so.1.57.0  libboost_math_tr1l.so.1.57.0  libboost_prg_exec_monitor.so.1.57.0  libboost_program_options.so.1.57.0  libboost_python.so.1.57.0  libboost_random.so.1.57.0  libboost_regex.so.1.57.0  libboost_serialization.so.1.57.0  libboost_signals.so.1.57.0  libboost_system.so.1.57.0  libboost_thread.so.1.57.0  libboost_timer.so.1.57.0  libboost_unit_test_framework.so.1.57.0  libboost_wave.so.1.57.0  libboost_wserialization.so.1.57.0
debug/: CTestTestfile.cmake  TudatBundle.cbp
debug/Testing/Temporary/: CTestCostData.txt
debug/cspice/: CSpice.cbp  CTestTestfile.cmake
debug/json/: CTestTestfile.cmake  nlohmann_json.cbp  nlohmann_jsonConfig.cmake  nlohmann_jsonConfigVersion.cmake  nlohmann_jsonTargets.cmake
debug/nrlmsise-00/: CTestTestfile.cmake  NRLMSISE00.cbp
debug/sofa/src/: CTestTestfile.cmake  Sofa.cbp
debug/tudat/Tudat/: CTestTestfile.cmake  Tudat.cbp
debug/tudat/Tudat/Astrodynamics/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/Aerodynamics/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/BasicAstrodynamics/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/EarthOrientation/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/ElectroMagnetism/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/Ephemerides/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/Gravitation/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/GroundStations/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/MissionSegments/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/ObservationModels/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/OrbitDetermination/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/OrbitDetermination/AccelerationPartials/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/OrbitDetermination/EstimatableParameters/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/OrbitDetermination/ObservationPartials/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/OrbitDetermination/RotationalDynamicsPartials/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/Propagators/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/Propulsion/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/ReferenceFrames/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/Relativity/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/SystemModels/: CTestTestfile.cmake
debug/tudat/Tudat/Astrodynamics/TrajectoryDesign/: CTestTestfile.cmake
debug/tudat/Tudat/Basics/: CTestTestfile.cmake
debug/tudat/Tudat/InputOutput/: CTestTestfile.cmake
debug/tudat/Tudat/JsonInterface/: CTestTestfile.cmake
debug/tudat/Tudat/Mathematics/: CTestTestfile.cmake
debug/tudat/Tudat/Mathematics/BasicMathematics/: CTestTestfile.cmake
debug/tudat/Tudat/Mathematics/Filters/: CTestTestfile.cmake
debug/tudat/Tudat/Mathematics/GeometricShapes/: CTestTestfile.cmake
debug/tudat/Tudat/Mathematics/Interpolators/: CTestTestfile.cmake
debug/tudat/Tudat/Mathematics/NumericalIntegrators/: CTestTestfile.cmake
debug/tudat/Tudat/Mathematics/NumericalQuadrature/: CTestTestfile.cmake
debug/tudat/Tudat/Mathematics/RootFinders/: CTestTestfile.cmake
debug/tudat/Tudat/Mathematics/Statistics/: CTestTestfile.cmake
debug/tudat/Tudat/SimulationSetup/: CTestTestfile.cmake
debug/tudat/Tudat/SimulationSetup/EnvironmentSetup/: CTestTestfile.cmake
debug/tudat/Tudat/SimulationSetup/EstimationSetup/: CTestTestfile.cmake
debug/tudat/Tudat/SimulationSetup/PropagationSetup/: CTestTestfile.cmake
debug/tudatExampleApplications/satellitePropagatorExamples/SatellitePropagatorExamples/: CTestTestfile.cmake  SatellitePropagatorExamples.cbp
debug/tudatExampleApplications/templateApplication/TemplateApplication/: CTestTestfile.cmake  TemplateApplication.cbp
latex/: md__r_e_a_d_m_e.tex  refman.tex
